--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,7 @@
-image: gitpod/workspace-full-vnc
+image:
+  file: .gitpod.Dockerfile
 ports:
+  - port: 5900
+    onOpen: ignore
   - port: 6080
-    onOpen: open-preview
+    onOpen: open-browser
